# pascal-c-compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
code-generator/: README.md
examples/: CodeGen_1_gcd  CodeGen_1_gcd.c  array.pas  complex.pas  gcd.pas  lexical_error.pas  semantic_error.pas  semantic_test.pas  sort.pas  syntax_error.pas
include/: codes_generator.h  exceptions.h  lex.yy.c  p2c.tab.h  pasc.tab.h  semantic_analyser.h  symbol_sheet.h  syntax_tree.h  types.h  utils.h
include/codes/: codes_generator.h
include/codes_generator/: codes_generator.h
include/defines/: const.h  types.h
include/semantic/: symbol_sheet.h
include/semantic_analyser/: semantic_analyser.h  symbol_sheet.h
include/symbol_sheet/: symbol_sheet.h
include/syntax/: syntax_tree.h
include/syntax_tree/: syntax_tree.h  syntax_tree_includes.h  syntax_tree_nodes.h
include/syntax_tree/non_terminator/: ConstDeclarations.h  ConstVariable.h  Expression.h  Factor.h  IdentifierList.h  Parameters.h  Periods.h  Program.h  Statements.h  SubProgram.h  Term.h  Type.h  TypeDeclarations.h  VarDeclarations.h  Variable.h
include/syntax_tree/terminator/: ControlStatements.h  Id.h  Operators.h
include/yacc/: lex.yy.c  p2c.tab.h  semantic_analyser.h
parser/: pascal.l  pascal.y
src/: main.cpp  p2c.tab.cpp  pasc.tab.cpp
src/codes/: codes_generator.cpp
src/codes_generator/: codes_generator.cpp
src/debug/: show_syntax_tree.cpp
src/semantic/: semantic_analyser.cpp  symbol_sheet.cpp
src/semantic_analyser/: semantic_analyser.cpp  symbol_sheet.cpp
src/symbol_sheet/: symbol_sheet.cpp
src/syntax_tree/non_terminator/: CompoundStatement.cpp  ConstDeclarations.cpp  ConstVariable.cpp  Expression.cpp  Factor.cpp  IdentifierList.cpp  Parameters.cpp  Periods.cpp  Program.cpp  ProgramBody.cpp  Statements.cpp  SubProgram.cpp  SubProgramDeclarations.cpp  Term.cpp  Type.cpp  VarDeclarations.cpp  Variable.cpp
src/syntax_tree/terminator/: ControlStatements.cpp  Id.cpp  Not.cpp  Operators.cpp
src/yacc/: p2c.tab.cpp
yacc/: lex.yy.c  p2c.l  p2c.y
